--- a/post-enhancements.css
+++ b/post-enhancements.css
@@ -61,7 +61,7 @@
 .article-outline {
     position: fixed;
     top: calc(var(--header-height) + 20px);
-    right: 20px;
+    left: 20px;
     width: 280px;
     max-height: calc(100vh - var(--header-height) - 40px);
     background-color: rgba(35, 35, 35, 0.9);
